# SentryFlow

./: .gitignore  .licenserc.yaml  Dockerfile  Dockerfile.log-client  Dockerfile.mongo-client  README.md
.github/: pull_request_template.md
.github/workflows/: ci-test-go.yml  ci-test-py.yml  latest-release.yaml  pr-checks.yaml  release-helm-charts.yaml  release-image.yaml  sentryflow-pr-checks.yml  sentryflow-release-image.yml  stable-release.yaml
SentryFlow/: Dockerfile  go.mod
SentryFlow/core/: logHandler.go  sentryflow.go
SentryFlow/exporter/: exporterHandler.go  exporterServer.go
clients/mongo-client/: README.md
deployments/: log-client.yaml  sentryflow.yaml
deployments/sentryflow/: Chart.yaml  Readme.md  values.yaml
docs/: CONTRIBUTING.md  getting_started.md  receivers.md
filter/envoy/envoy-wasm-filters/: Cargo.toml  Dockerfile  LICENSE_MIT  Makefile  Readme.md  docker-compose.yaml  envoy.yaml  envoyFilter.yaml  envoyfilter.yaml  wasm-plugin.yaml
filter/envoy/envoy-wasm-filters/src/: lib.rs
filter/nginx/: Readme.md  nginx.conf  sentryflow.js
hack/: add-license-header  license.header  update-image-tag.sh
protobuf/: .gitignore  Makefile  go.mod  go.sum  sentryflow.pb.go  sentryflow.proto  sentryflow_grpc.pb.go  sentryflow_metrics.pb.go  sentryflow_metrics.proto  sentryflow_metrics_grpc.pb.go
protobuf/golang/: go.mod  go.sum  sentryflow.pb.go  (+3 more)
sentryflow/: Dockerfile  Makefile  go.mod  go.sum  main.go
sfctl/: Makefile  Readme.md  go.mod  go.sum  main.go
speculator/: Dockerfile  Makefile  go.mod  go.sum  main.go  notes
(+125 files in other folders)
