[package]
name = "envoy-wasm-filters"
version = "0.1.0"
authors = ["Anurag Rajawat", "anuragsinghrajawat22@gmail.com"]
edition = "2021"

[lib]
name = "httpfilters"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
proxy-wasm = "0.2.2"
log = "0.4.22"
serde_json = "1.0.127"
serde = { version = "1.0.209", features = ["derive"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
